[tool.poetry]
name = "self-driving"
version = "0.1.0"
description = ""
authors = ["kungyu.lee <kungyu.lee@wesang.com>"]
readme = "README.md"
packages = [{include = "self_driving"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
